tests/purs/failing/3801.purs
-- @shouldFailWith ErrQualifierLexeme
module Main where

import Prelude as Prelude

x :: Int
x = Prelude.
