tests/purs/failing/3801.out
Error found:
at tests/purs/failing/3801.purs:6:13 - 6:14 (line 6, column 13 - line 6, column 14)

  Unable to parse module:
  Unexpected whitespace character U+000A, expected qualifier


See https://github.com/purescript/documentation/blob/master/errors/ErrorParsingModule.md for more information,
or to contribute content related to this error.

